<resources>
    <string name="app_name">TwitterClone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_email">Email</string>
    <string name="label_next">Next</string>
    <string name="label_login">Log in</string>
    <string name="label_password">Password</string>

    <string name="placeholder_search">Search Placeholder</string>
    <string name="placeholder_notifications">Notifications Placeholder</string>
    <string name="placeholder_messages">Messages Placeholder</string>
    <string name="placeholder_space">Space Placeholder</string>
    <string name="label_home">Home</string>
    <string name="label_search">Search</string>
    <string name="label_space">Space</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_messages">Messages</string>
    <string name="title_activity_authenticate">Authenticate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_auth">Auth</string>
    <string name="label_create">create</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_home_title">Create your account</string>
    <string name="label_login_title">To get started, first enter your phone, email, or @username</string>
    <string name="label_phone_email_username">Phone, email, or @username</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="label_landing_title">See what\'s happening in the world right now.</string>
    <string name="label_create_account">Create account</string>
    <string name="label_continue_w_google">Continue with Google</string>
    <string name="label_terms_privacy_policy_cookie">By signing up, you agree to our Terms, Privacy Policy, and Cookie Use.</string>
    <string name="label_have_an_account_already">Have an account already? Log in</string>
    <string name="label_or">or</string>
    <string name="label_enter_your_password">Enter your password</string>

</resources>