<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.twitterClone.ui.fragment.auth.LoginPassword">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_phone_email_username"
        style="@style/edit_text_default"
        android:hint="@string/label_phone_email_username"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@id/margin_end_vertical_guideline"
        app:layout_constraintStart_toEndOf="@id/margin_start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/twenty_percent_horizontal_guideline"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        style="@style/edit_text_default"
        android:hint="@string/label_password"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@id/margin_end_vertical_guideline"
        app:layout_constraintStart_toEndOf="@id/margin_start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/et_phone_email_username"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_enter_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/margin_start_vertical_guideline"
        android:text="@string/label_enter_your_password"
        android:textSize="29sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ten_percent_horizontal_guideline"
        />

    <!-- 10% Horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ten_percent_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <!-- 20% Horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/twenty_percent_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <!-- 1% Horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/one_percent_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <!-- 5% Horizontal -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/five_percent_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <!-- 50% Vertical-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <!-- 46% Vertical-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/forty_five_percent_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.46" />

    <!-- 54% Vertical-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fifty_five_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/twitter_logo_vector_png_clipart_1"
        app:layout_constraintBottom_toTopOf="@id/ten_percent_horizontal_guideline"
        app:layout_constraintEnd_toStartOf="@id/fifty_five_vertical_guideline"
        app:layout_constraintStart_toEndOf="@id/forty_five_percent_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/five_percent_horizontal_guideline"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/eight_four_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/semi_light"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/margin_end_vertical_guideline"
        app:layout_constraintStart_toEndOf="@id/margin_start_vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/eight_four_horizontal_guideline"

        />

    <!--Margin End-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/btn_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/label_forgot_password"
        android:textAllCaps="false"
        android:textColor="#757575"
        app:layout_constraintStart_toEndOf="@id/margin_start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/margin_bottom_horizontal_guideline"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <!--Margin Start-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <!--Margin Bottom-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_bottom_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/btn_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_"
        android:text="@string/label_login"
        android:textAllCaps="false"
        android:textColor="@color/semi_dark"
        app:layout_constraintEnd_toStartOf="@id/margin_end_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/margin_bottom_horizontal_guideline"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>