<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.twitterClone.ui.fragment.Login">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/twitter_logo_vector_png_clipart_1"
        app:layout_constraintBottom_toTopOf="@id/ten_percent_horizontal_guideline"
        app:layout_constraintEnd_toStartOf="@id/fifty_five_vertical_guideline"
        app:layout_constraintStart_toEndOf="@id/forty_five_percent_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/five_percent_horizontal_guideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/label_login_title"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/margin_end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/margin_start_vertical_guideline"
        app:layout_constraintTop_toTopOf="@+id/margin_top_horizontal_guideline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:text="@string/label_login"
        app:layout_constraintTop_toBottomOf="@id/margin_bottom_horizontal_guideline"
        app:layout_constraintEnd_toStartOf="@id/margin_end_vertical_guideline"
        style="@style/btnDefault"
        />

    <!-- 35% Horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/thirty_five_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_phone_emai_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/label_phone_email_username"
        android:textColorHint="@color/dark_"
        android:paddingBottom="12dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/margin_start_vertical_guideline"
        app:layout_constraintEnd_toStartOf="@id/margin_end_vertical_guideline"
        app:layout_constraintBottom_toTopOf="@id/thirty_five_horizontal_guideline"
        />

    <!-- 5% Horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/five_percent_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <!-- 10% Horizontal -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ten_percent_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <!-- 50% Vertical-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <!-- 45% Vertical-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/forty_five_percent_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.46" />

    <!-- 55% Vertical-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fifty_five_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.54" />


    <!--Margin Start-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <!--Margin End-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <!--Margin Top-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_top_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <!--Margin Bottom-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_bottom_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>